fixed spacing and drop shadow glitch

--- a/styles/index.css
+++ b/styles/index.css
@@ -18,12 +18,16 @@ body {
 
 .main {
     display:grid;
-    grid-template-columns: 10vw auto 10vw;
-    grid-template-rows: 100vh 60% 200px;
+    grid-template-columns: 7vw auto 7vw;
+    grid-template-rows: auto 60% 200px;
     grid-template-areas: 
     ". head ."
     ". cont ."
     ". foot .";
+  }
+
+  .main > * {
+      padding-bottom:60px;
   }
 
 .header {
@@ -40,7 +44,10 @@ body {
     font-size: 5em;
     text-align: center;
     color: white;
-    text-shadow: 6px 6px 0px rgba(0,0,0,0.2);}
+    text-shadow: 6px 6px 0px rgba(0,0,0,0.2);
+    margin-bottom:40px;
+    margin-top: 30px;
+}
 .content {
     grid-area: cont;
     padding:30px;
@@ -62,11 +69,7 @@ body {
     body {
         padding-top:100px;
     }
-    .main {
 
-        grid-template-rows: 80vh 60% 200px;
-    
-    }
     .header-lead {
         font-size:3.5em;
     }
@@ -77,15 +80,13 @@ body {
 
     .header-lead {
         font-size:2.5em;
+        text-shadow: 3px 3px 0px rgba(0,0,0,0.2);
+
     }
     body {
         padding-top:70px;
     }
-    .main {
-
-        grid-template-rows: 60vh 60% 200px;
-    
-    }
+   
     
     
     } 
